Préparation de base

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,9 +67,12 @@ include_directories( ${PKG_INCLUDE_DIRS} )
 include_directories ( "${CMAKE_SOURCE_DIR}/include" )
 
 # Éxécutable
-add_executable( mastermind.out src/main.cpp src/mastermind.cpp )
+add_executable( server.out src/server.cpp )
+add_executable( client.out src/client.cpp )
 
 # Édition des liens
-target_link_libraries( mastermind.out ${PKG_LIBRARIES} )
+target_link_libraries( server.out ${PKG_LIBRARIES} )
+target_link_libraries( client.out ${PKG_LIBRARIES} )
+
 
 # TODO: Tests unitaires
