--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,8 @@ include_directories ( "${CMAKE_SOURCE_DIR}/include" )
 add_executable( mastermind.out src/main.cpp
   src/mastermind.cpp
   src/Pion.cpp
-  src/Combinaison.cpp)
+  src/Combinaison.cpp
+  src/Plateau.cpp)
 
 # Édition des liens
 target_link_libraries( mastermind.out ${PKG_LIBRARIES} )
