--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,8 @@ add_executable( mastermind.out src/main.cpp
   src/Combinaison.cpp
   src/Plateau.cpp)
 add_executable( main.out gui/main.cpp
-  
+  gui/menu1.cpp
+  gui/menu2.cpp
   )
 
 # Édition des liens
