--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,14 +75,14 @@ add_executable( client_gui.out src/main_client.cpp
   src/NetworkState.cpp
   src/Button.cpp
   src/TextField.cpp
-  src/client.cpp
+  src/Client.cpp
   src/mastermind.cpp
   src/Pion.cpp
   src/Combinaison.cpp
   src/Plateau.cpp
   )
 
-add_executable( server.out src/server.cpp
+add_executable( server.out src/Server.cpp
   src/mastermind.cpp
   src/Pion.cpp
   src/Combinaison.cpp
@@ -95,16 +95,16 @@ target_link_libraries( server.out ${PKG_LIBRARIES} )
 
 
 # TODO: Tests unitaires
-add_executable( main_test.out src/main_test.cpp
+add_executable( main_test.out tests/main_test.cpp
   src/mastermind.cpp
   src/Pion.cpp
   src/Combinaison.cpp
   src/Plateau.cpp
   
-  src/mastermind_test.cpp
-  src/Pion_test.cpp
-  src/Plateau_test.cpp
-  src/Combinaison_test.cpp
+  tests/mastermind_test.cpp
+  tests/Pion_test.cpp
+  tests/Plateau_test.cpp
+  tests/Combinaison_test.cpp
 )
 
 target_link_libraries( main_test.out ${PKG_LIBRARIES} )
