--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,8 +66,8 @@ pkg_check_modules( PKG REQUIRED cpputest sfml-all )
 include_directories( ${PKG_INCLUDE_DIRS} )
 include_directories ( "${CMAKE_SOURCE_DIR}/include" )
 
-# Éxécutable
-add_executable( client_gui.out src/main_client.cpp
+# Éxécutable client
+add_executable( client.out src/main_client.cpp
   src/App.cpp
   src/GameStateManager.cpp
   src/MenuState.cpp
@@ -84,17 +84,14 @@ add_executable( client_gui.out src/main_client.cpp
   #src/PanelPions.cpp
 )
 
-add_executable( server.out src/Server.cpp
+# Éxécutable serveur
+add_executable( server.out src/main_server.cpp
+  src/Server.cpp
   src/mastermind.cpp
   src/Pion.cpp
   src/Combinaison.cpp
   src/Plateau.cpp
 )
-
-# Édition des liens
-target_link_libraries( client_gui.out ${PKG_LIBRARIES} )
-target_link_libraries( server.out ${PKG_LIBRARIES} )
-
 
 # TODO: Tests unitaires
 add_executable( main_test.out tests/main_test.cpp
@@ -109,4 +106,7 @@ add_executable( main_test.out tests/main_test.cpp
   tests/Combinaison_test.cpp
 )
 
+# Édition des liens
+target_link_libraries( client.out ${PKG_LIBRARIES} )
+target_link_libraries( server.out ${PKG_LIBRARIES} )
 target_link_libraries( main_test.out ${PKG_LIBRARIES} )
