Formattage + Suppression du dossier media

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ add_executable( client.out src/main_client.cpp
   src/PionDrawable.cpp
   src/Utils.cpp
   src/PanelPions.cpp
-  src/PlateauDrawable.cpp
+  src/Board.cpp
   src/correctionDrawable.cpp
 )
 
